<resources>
    <string name="app_name">Flawless</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="nav_drawer_opened">drawer opened</string>
    <string name="nav_drawer_closed">drawer closed</string>
    <string name="nav_products">Products</string>
    <string name="nav_services">Services</string>
    <string name="nav_news">News</string>
    <string name="nav_lifestyle">Lifestyle</string>
    <string name="nav_acne_control">Acne Control</string>
    <string name="nav_whitening">Whitening</string>
    <string name="nav_oil_control">Oil Control</string>
    <string name="nav_age_defy">Age Defy</string>
    <string name="nav_body">Body Services</string>
    <string name="toolbar_home">Home</string>
    <string name="toolbar_products">Products</string>
    <string name="toolbar_services">Services</string>
    <string name="toolbar_news">News</string>
    <string name="toolbar_lifestyle">Lifestyle</string>
    <string name="toolbar_clinics">Clinics</string>
    <string name="toolbar_about">About Us</string>
    <string name="toolbar_corp">Corporate Information</string>
    <string name="toolbar_brand">Brand Story</string>
    <string name="header_advanced_facials">Facials</string>
    <string name="header_regular_facials">Regular Facials</string>
    <string name="header_microdermabrasion">Microdermabrasion</string>
    <string name="header_body_services">Body Services</string>
    <string name="header_medical_services">Medical Services</string>
    <string name="header_hair_removal">Hair Removal</string>
    <string name="header_peels">Peels</string>
    <string name="footer">©2016 Forever Flawless Face and Body Clinic Inc.</string>
    <string-array name="array_list_products_title">
        <item>Skin Lite Cream</item>
        <item>Skin White Therapy</item>
        <item>Skin Whitening Soap</item>
        <item>Skin Lightening Lotion with Sunblock</item>
        <item>White Plus Cream</item>
        <item>Whitening Toner</item>
        <item>Age Defy Cream</item>
        <item>Oatmeal Soap</item>
        <item>Tea Tree Soap</item>
        <item>Pore Refiner</item>
        <item>Skin Renew Cream</item>
        <item>RG Soap</item>
        <item>RG Cream</item>
        <item>RG Toner</item>
        <item>SAS Soap</item>
        <item>Skin Protect Gel</item>
        <item>Collagen Soap</item>
        <item>Skin Protect Cream</item>
        <item>Age Defy Toner</item>
        <item>AHA Soap </item>
        <item>Anti-Perspirant Deo</item>
        <item>Flawless Skin Protect Mist</item>
        <item>Whitening Super Serum</item>
        <item>Age Defy Super Serum</item>
        <item>Nano Whiteness Glutathione Plus</item>
        <item>Skinlift Collagen</item>
        <item>Shape and Sculpt L-Carnitine</item>
    </string-array>
    <string-array name="array_list_products_price">
        <item>P 340</item>
        <item>P 340</item>
        <item>P 140</item>
        <item>P 480</item>
        <item>P 730</item>
        <item>P 290</item>
        <item>P 330</item>
        <item>P 140</item>
        <item>P 140</item>
        <item>P 290</item>
        <item>P 330</item>
        <item>P 140</item>
        <item>P 280</item>
        <item>P 280</item>
        <item>P 140</item>
        <item>P 290</item>
        <item>P 140</item>
        <item>P 290</item>
        <item>P 290</item>
        <item>P 140</item>
        <item>P 180</item>
        <item>P 450</item>
        <item>P 1500</item>
        <item>P 1500</item>
        <item>P 3500</item>
        <item>P 2250</item>
        <item>P 2250</item>
    </string-array>
    <string-array name="array_list_products_details">
        <item>
            Prevents sun damage, lightens skin and diminishes discoloration while promoting the
            growth of healthy tissues.
        </item>

        <item>
            A whitening moisturizer that targets pigmentations from acne and other blemishes.
            It exfoliates skin, resulting to a brighter and more even skin tone.
        </item>
        <item>
            A moisturizing soap that lightens spots and discolorations and provides antimicrobial
            and moisture care.
        </item>
        <item>
            Lightens skin by reducing the formation of melanin. Contains sunscreen for added
            protection from the sun.
        </item>
        <item>
            Abundant with natural plant extracts. It works to ensure an evenly-lighter and
            well-moisturized skin.
        </item>
        <item>
            Cleanses and lightens skin while restoring the skin’s natural pH level; working hard to
            remove dark marks and other blemishes.
        </item>
        <item>
            Goes deep down into the skin to promote balance and moisturization, preventing the
            signs of aging.
        </item>
        <item>
            A gentle exfoliating soap meant to slough off dead skin cells to reveal a brighter,
            softer and more radiant complexion.
        </item>
        <item>
            Kills bacteria and cleanses skin of impurities.
        </item>
        <item>
            This toner was specially formulated to minimize pores as well as tone the skin.
        </item>
        <item>
            A double-functioning cream that acts to exfoliate and unclog pores while providing
            balanced moisturization and clarity.
        </item>
        <item>
            Specially formulated for men, this soap removes dead skin cells to reveal a more radiant
            and youthful complexion.
        </item>
        <item>
            A fast-absorbing moisturizer that works to provide balance moisturization and protect
            skin from harmful UV rays.
        </item>
        <item>
            Especially formulated to provide men with deep-cleansing action as well as restore the
            skin’s natural pH balance and inhibit acne formation.
        </item>
        <item>
            A specially designed soap made to combat acne by targeting acne-causing bacteria and
            decreasing oiliness of acne-prone skin.
        </item>
        <item>
            A specially-formulated sun screen that protects the skin without leaving a greasy feel.
        </item>
        <item>
            A non-drying soap that effectively cleanses the skin without stripping off its natural
            protection; helps firm up the skin.
        </item>
        <item>
            Protects the skin against photodamage; delays wrinkling, sagging and uneven
            discoloration of skin.
        </item>
        <item>
            A must-have for those aiming for a younger-looking skin, the Age Defy Toner lightly
            exfoliates and minimizes the pores, improves skin clarity and smoothens the skin.
        </item>
        <item>
            Helps improve the softness and texture of the skin.
        </item>
        <item>
            Lightens dark underarms and helps protect against body odor all day.
        </item>
        <item>
            Formulated with a high SPF of 70, the fuss-free and water-resistant Flawless Skin
            Protect Mist effectively shields skin from harmful UVA and UVB rays.
        </item>
        <item>
            Lightens skin and pigmentations for a fairer and evenly toned complexion.
        </item>
        <item>
            Advanced youth-boosting serum that helps restore your skin’s youthful radiance.
        </item>
        <item>
            Detoxifies and helps lighten and rejuvenate skin for a radiant glow.
        </item>
        <item>
            Natural anit-aging tablets that supply collagen production for skin regeneration and
            firmness.
        </item>
        <item>
            Maximizes production of energy to aid weight loss and fat burning.
        </item>
    </string-array>
    <string-array name="array_list_advanced_facials">
        <item>All Natural Ultimate Whitening Facial</item>
        <item>Cell Booster Infusion Mask</item>
        <item>Acne Control Advanced Facial</item>
        <item>Oil Control Advanced Facial</item>
        <item>Age Defy Advanced Facial</item>
        <item>Flawless White Advanced Facial</item>
        <item>Real Gentleman Advanced Facial</item>

        <item>Classic Facial</item>
        <item>Acne Control Facial</item>
        <item>Oil Control Facial</item>
        <item>Age Defy Facial</item>
        <item>Flawless White Facial</item>
        <item>Real Gentleman Facial</item>
    </string-array>
    <string-array name="array_details_advanced_facials">
        <item>
            Immediately lightens, smoothens and rejuvenates the skin with the use of combined natural
        ingredients from the Dead Sea, including Dunaliella Seaweeds,and Gigawhite, a natural
        skin-lightening agent.
        </item>
        <item>
            Deeply nourishes and cools the skin using a hydrogel mask infused with potent cultured
        Apple growth factors.
        </item>
        <item>
            Targets acne-causing bacteria while delivering healing and soothing benefits to the skin
        using a cooling green oxygenating mask.
        </item>
        <item>
            Visibly reduces and unclogs pores, and helps control oil production using a powerful cooling
        mask while promoting its natural healing process.</item>
        <item>
            Effectively restores skin’s radiance and elasticity with the use of Seaweed and Vitamin C
        extracts.
        </item>
        <item>
            Beautifully lightens and moisturizes face using White Nest extract and moisturizing milk
        lotion, leaving the face evenly-toned, supple and fair.
        </item>
        <item>
            Efficiently restores skin’s natural balance, minimizes pores, reduces oil production and
        tones up face using a mask made of active vegetal charcoal.
        </item>

        <item>
            Ideal for all skin types. Clears and refines skin by relaxing facial nerves and removing
        facial impurities.
        </item>
        <item>
            Diminishes acne-causing bacteria using an antiseptic mask that also contains healing
        properties.
        </item>
        <item>
            Unclogs pores and helps reduce oil production using a seaweed mask.
        </item>
        <item>
            Lifts skin and boosts its natural moisture using a collagen mask.
        </item>
        <item>
            Brings out a radiant face using a skin-lightening mask that contains a plant-based whitening
        agent called Melfade.
        </item>
        <item>
            Specially formulated for men, this restores skin’s natural balance and firms it with the use
        of an algae mask.
        </item>
    </string-array>
    <string-array name="array_price_list_advanced_facials">
        <item>P 1,600</item>
        <item>P 1,400</item>
        <item>P 980</item>
        <item>P 980</item>
        <item>P 980</item>
        <item>P 980</item>
        <item>P 980</item>
        <item>P 399</item>
        <item>P 625</item>
        <item>P 625</item>
        <item>P 625</item>
        <item>P 625</item>
        <item>P 625</item>
    </string-array>
</resources>